mysql-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  namespace: default
  labels:
    app: vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  replicas: 1
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: voklur/mysql
        ports: 
        - name: vprodb-port
          containerPort: 3306
        volumeMounts:
           - name: mysql-storage
             mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-claim
