angular-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ang-app
  labels:
    app: ang-app
spec:
  selector:
    matchLabels:
      app: ang-app
  replicas: 1
  template:
    metadata:
      labels:
        app: ang-app
    spec:
      containers:
      - name: ang-app
        image: voklur/node
        ports: 
        - name: ang-app-port
          containerPort: 4200
 
---
apiVersion: v1
kind: Service
metadata:
  name: ang-app
spec:
  ports:
    - port: 4200
      targetPort: ang-app-port
      protocol: TCP
  selector:
    app: ang-app
  type: NodePort
