angular-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ang-app
spec:
  ports:
    - port: 4200
      targetPort: ang-app-port
      protocol: TCP
  selector:
    app: ang-app
  type: LoadBalancer
