nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-back
spec:
  ports:
    - port: 3000
      targetPort: nginx-back-port
      protocol: TCP
  selector:
    app: nginx-back
  type: ClusterIP
